[gd_scene load_steps=16 format=2]

[ext_resource path="res://Sprites/Pathfinding.png" type="Texture" id=1]
[ext_resource path="res://Mobs_and_NPC/Pathfinder2.gd" type="Script" id=2]
[ext_resource path="res://Skills/Enemy_hitbox.gd" type="Script" id=3]
[ext_resource path="res://Skills/Hitbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Skills/Hurtbox.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="Animation" id=2]
resource_name = "attack"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13, 14, 15, 16, 17, 18 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LineOfSight:enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.95 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D/CollisionShape2D2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "die"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39, 39, 39, 39, 39, 39, 39, 39 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RayCast2D:enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 27, 28, 29, 30 ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=6]
resource_name = "land"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43, 43, 43, 43, 43, 43 ]
}

[sub_resource type="Animation" id=7]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21 ]
}

[sub_resource type="CircleShape2D" id=8]

[sub_resource type="RectangleShape2D" id=9]

[sub_resource type="CircleShape2D" id=10]

[node name="Pathfinder" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -13, -16.927 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )
vframes = 5
hframes = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Line2D" type="Line2D" parent="."]
visible = false
width = 2.0

[node name="LineOfSight" type="RayCast2D" parent="."]
scale = Vector2( 3, 1 )
cast_to = Vector2( 70, 0 )
collision_mask = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 2 )
anims/die = SubResource( 3 )
anims/hurt = SubResource( 4 )
anims/idle = SubResource( 5 )
anims/land = SubResource( 6 )
anims/move = SubResource( 7 )

[node name="Area2D" parent="." instance=ExtResource( 4 )]
position = Vector2( -13, 0 )
scale = Vector2( 2, 2 )
collision_layer = 64
collision_mask = 2
script = ExtResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 8 )
disabled = true

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]
visible = false
scale = Vector2( 2, 2 )
collision_layer = 32
collision_mask = 8

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 9 )

[node name="RayCast2D" type="RayCast2D" parent="."]
scale = Vector2( 1, 0.7 )
enabled = true

[node name="Area2D2" parent="." instance=ExtResource( 4 )]
scale = Vector2( 0.2, 0.2 )
collision_layer = 64
collision_mask = 16
script = ExtResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource( 10 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
